// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render extra key correctly when using extra-key prop 1`] = `
<div role="button"
     tabindex="0"
     class="r-key"
>
  foo
</div>
`;

exports[`should render extra-key slot correctly 1`] = `
<div role="button"
     tabindex="0"
     class="r-key"
>
  Custom Extra Key
</div>
`;

exports[`should render title and close button correctly 1`] = `
<div class="r-number-keyboard__header">
  <h2 class="r-number-keyboard__title">
    Title
  </h2>
  <button type="button"
          class="r-number-keyboard__close r-haptics-feedback"
  >
    Close
  </button>
</div>
`;

exports[`should render title-left slot correctly 1`] = `
<div class="r-number-keyboard__header">
  <span class="r-number-keyboard__title-left">
    Custom Title Left
  </span>
</div>
`;
